--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Movies App",
   "private": true,
   "scripts": {
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
