--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "jeremy.zaire",
   "license": "MIT",
   "devDependencies": {
+    "css-loader": "^6.7.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2"
   },
