chore: plugin html-webpack-plugin & webpack-manifest-plugin

--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "license": "MIT",
   "devDependencies": {
     "css-loader": "^6.7.0",
+    "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "webpack-manifest-plugin": "^4.1.1"
   },
   "dependencies": {
     "lodash": "^4.17.21"
