--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Movies App",
   "private": true,
   "scripts": {
-    "build": "webpack",
-    "start": "webpack serve --open",
+    "build": "webpack --config webpack.prod.js",
+    "start": "webpack serve --open --config webpack.dev.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "jeremy.zaire",
@@ -17,7 +17,8 @@
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4",
-    "webpack-manifest-plugin": "^4.1.1"
+    "webpack-manifest-plugin": "^4.1.1",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
     "lodash": "^4.17.21"
