--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "scripts": {
     "build": "webpack --config webpack.prod.js",
+    "lint": "eslint",
     "start": "webpack serve --open --config webpack.dev.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,6 +13,7 @@
   "license": "MIT",
   "devDependencies": {
     "css-loader": "^6.7.0",
+    "eslint": "^8.10.0",
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.70.0",
@@ -20,7 +22,5 @@
     "webpack-manifest-plugin": "^4.1.1",
     "webpack-merge": "^5.8.0"
   },
-  "dependencies": {
-    "lodash": "^4.17.21"
-  }
+  "dependencies": {}
 }
