chore: 🤖 add husky, lint-staged, git-cz

--- a/package.json
+++ b/package.json
@@ -4,23 +4,38 @@
   "description": "Movies App",
   "private": true,
   "scripts": {
+    "commit": "git-cz",
     "build": "webpack --config webpack.prod.js",
     "lint": "eslint --cache",
     "start": "webpack serve --open --config webpack.dev.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.{css,html,js,jsx,json,md}": "prettier --write"
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
   },
   "author": "jeremy.zaire",
   "license": "MIT",
   "devDependencies": {
+    "@commitlint/cli": "^16.2.1",
+    "@commitlint/config-conventional": "^16.2.1",
     "css-loader": "^6.7.0",
     "eslint": "^8.10.0",
+    "git-cz": "^4.8.0",
     "html-webpack-plugin": "^5.5.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.5",
+    "prettier": "^2.5.1",
     "style-loader": "^3.3.1",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4",
     "webpack-manifest-plugin": "^4.1.1",
     "webpack-merge": "^5.8.0"
-  },
-  "dependencies": {}
+  }
 }
