--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "webpack --config webpack.prod.js",
     "lint": "eslint --cache",
     "start": "webpack serve --open --config webpack.dev.js",
+    "start:api": "json-server --watch db/imdb.json",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky install"
   },
@@ -29,6 +30,7 @@
     "git-cz": "^4.8.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.4",
+    "json-server": "^0.17.0",
     "lint-staged": "^12.3.5",
     "prettier": "^2.5.1",
     "style-loader": "^3.3.1",
